Changing from '%>%' to '|>' operator

--- a/course-materials/_slides/u2-d04-viz-cat/u2-d04-viz-cat.Rmd
+++ b/course-materials/_slides/u2-d04-viz-cat/u2-d04-viz-cat.Rmd
@@ -19,7 +19,7 @@ output:
 ```{r packages, echo=FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(openintro)
-loans_full_schema <- loans_full_schema %>%
+loans_full_schema <- loans_full_schema |>
   mutate(grade = factor(grade, ordered = TRUE))
 ```
 
@@ -40,7 +40,7 @@ class: middle
 
 ```{r}
 library(openintro)
-loans <- loans_full_schema %>%
+loans <- loans_full_schema |>
   select(loan_amount, interest_rate, term, grade, 
          state, annual_income, homeownership, debt_to_income)
 glimpse(loans)
