--- a/course-materials/_slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.Rmd
+++ b/course-materials/_slides/u2-d06-grammar-wrangle/u2-d06-grammar-wrangle.Rmd
@@ -208,7 +208,7 @@ What if we wanted to select these columns, and then arrange the data in descendi
 .pull-left[
 Select:
 ```{r}
-hotels %>%
+hotels |>
   select(hotel, lead_time)
 ```
 ]
@@ -217,8 +217,8 @@ hotels %>%
 .pull-right[
 Select, then arrange:
 ```{r}
-hotels %>%
-  select(hotel, lead_time) %>%
+hotels |>
+  select(hotel, lead_time) |>
   arrange(desc(lead_time))
 ```
 ]
@@ -243,8 +243,8 @@ In programming, a pipe is a technique for passing information from one process t
 .pull-right[
 .small[
 ```{r}
-hotels %>% #<<
-  select(hotel, lead_time) %>%
+hotels |> #<<
+  select(hotel, lead_time) |>
   arrange(desc(lead_time))
 ```
 ]
@@ -263,8 +263,8 @@ In programming, a pipe is a technique for passing information from one process t
 .pull-right[
 .small[
 ```{r}
-hotels %>%
-  select(hotel, lead_time) %>% #<<
+hotels |>
+  select(hotel, lead_time) |> #<<
   arrange(desc(lead_time))
 ```
 ]
@@ -284,8 +284,8 @@ In programming, a pipe is a technique for passing information from one process t
 .pull-right[
 .small[
 ```{r}
-hotels %>%
-  select(hotel, lead_time) %>% 
+hotels |>
+  select(hotel, lead_time) |> 
   arrange(desc(lead_time)) #<<
 ```
 ]
@@ -333,9 +333,9 @@ park(drive(start_car(find("keys")), to = "work"))
 - Writing it out using pipes give it a more natural (and easier to read) 
 structure:
 ```{r eval=FALSE}
-find("keys") %>%
-  start_car() %>%
-  drive(to = "work") %>%
+find("keys") |>
+  start_car() |>
+  drive(to = "work") |>
   park()
 ```
 
@@ -343,7 +343,7 @@ find("keys") %>%
 
 ## A note on piping and layering
 
-- `%>%` used mainly in **dplyr** pipelines, *we pipe the output of the previous line of code as the first input of the next line of code*
+- `|>` used mainly in **dplyr** pipelines, *we pipe the output of the previous line of code as the first input of the next line of code*
 
 --
 - `+` used in **ggplot2** plots is used for "layering", *we create the plot in layers, separated by `+`*
@@ -363,12 +363,12 @@ hotels +
 `r emo::ji("white_check_mark")`
 
 ```{r eval=FALSE}
-hotels %>%
+hotels |>
   select(hotel, lead_time)
 ```
 
 ```{r echo=FALSE, output.lines=6}
-hotels %>%
+hotels |>
   select(hotel, lead_time)
 ```
 ]
@@ -381,7 +381,7 @@ hotels %>%
 `r emo::ji("x")`
 
 ```{r error=TRUE}
-ggplot(hotels, aes(x = hotel, fill = deposit_type)) %>%
+ggplot(hotels, aes(x = hotel, fill = deposit_type)) |>
   geom_bar()
 ```
 
@@ -397,7 +397,7 @@ ggplot(hotels, aes(x = hotel, fill = deposit_type)) +
 
 ## Code styling
 
-Many of the styling principles are consistent across `%>%` and `+`:
+Many of the styling principles are consistent across `|>` and `+`:
 
 - always a space before
 - always a line break after (for pipelines with more than 2 lines)
