--- a/course-materials/_slides/u4-d09-cross-validation/u4-d09-cross-validation.Rmd
+++ b/course-materials/_slides/u4-d09-cross-validation/u4-d09-cross-validation.Rmd
@@ -162,7 +162,7 @@ dim(office_test)
 ## Specify model
 
 ```{r}
-office_mod <- linear_reg() %>%
+office_mod <- linear_reg() |>
   set_engine("lm")
 
 office_mod
@@ -175,14 +175,14 @@ office_mod
 .panelset[
 .panel[.panel-name[Code]
 ```{r}
-office_rec <- recipe(imdb_rating ~ ., data = office_train) %>%
+office_rec <- recipe(imdb_rating ~ ., data = office_train) |>
   # title isn't a predictor, but keep around to ID
-  update_role(title, new_role = "ID") %>%
+  update_role(title, new_role = "ID") |>
   # extract month of air_date
-  step_date(air_date, features = "month") %>%
-  step_rm(air_date) %>%
+  step_date(air_date, features = "month") |>
+  step_rm(air_date) |>
   # make dummy variables of month 
-  step_dummy(contains("month")) %>%
+  step_dummy(contains("month")) |>
   # remove zero variance predictors
   step_zv(all_predictors())
 ```
@@ -203,8 +203,8 @@ office_rec
 .panelset[
 .panel[.panel-name[Code]
 ```{r}
-office_wflow <- workflow() %>%
-  add_model(office_mod) %>%
+office_wflow <- workflow() |>
+  add_model(office_mod) |>
   add_recipe(office_rec)
 ```
 ]
@@ -224,14 +224,14 @@ office_wflow
 .panelset[
 .panel[.panel-name[Code]
 ```{r}
-office_fit <- office_wflow %>%
+office_fit <- office_wflow |>
   fit(data = office_train)
 ```
 ]
 .panel[.panel-name[Output]
 .small[
 ```{r}
-tidy(office_fit) %>%
+tidy(office_fit) |>
   print(n = 12)
 ```
 ]
@@ -249,8 +249,8 @@ class: middle
 ## Make predictions for training data
 
 ```{r}
-office_train_pred <- predict(office_fit, office_train) %>%
-  bind_cols(office_train %>% select(imdb_rating, title))
+office_train_pred <- predict(office_fit, office_train) |>
+  bind_cols(office_train |> select(imdb_rating, title))
 
 office_train_pred
 ```
@@ -305,7 +305,7 @@ Is this RMSE considered low or high?
 --
 
 ```{r}
-office_train %>%
+office_train |>
   summarise(min = min(imdb_rating), max = max(imdb_rating))
 ```
 
@@ -324,8 +324,8 @@ but, really, who cares about predictions on .pink[training] data?
 ## Make predictions for testing data
 
 ```{r}
-office_test_pred <- predict(office_fit, office_test) %>%
-  bind_cols(office_test %>% select(imdb_rating, title))
+office_test_pred <- predict(office_fit, office_test) |>
+  bind_cols(office_test |> select(imdb_rating, title))
 
 office_test_pred
 ```
@@ -353,29 +353,29 @@ rsq(office_test_pred, truth = imdb_rating, estimate = .pred)
 <br>
 
 ```{r echo=FALSE}
-rmse_train <- rmse(office_train_pred, truth = imdb_rating, estimate = .pred) %>% 
-  pull(.estimate) %>%
+rmse_train <- rmse(office_train_pred, truth = imdb_rating, estimate = .pred) |> 
+  pull(.estimate) |>
   round(3)
 
-rsq_train <- rsq(office_train_pred, truth = imdb_rating, estimate = .pred) %>% 
-  pull(.estimate) %>%
+rsq_train <- rsq(office_train_pred, truth = imdb_rating, estimate = .pred) |> 
+  pull(.estimate) |>
   round(3)
 
-rmse_test <- rmse(office_test_pred, truth = imdb_rating, estimate = .pred) %>% 
-  pull(.estimate) %>%
+rmse_test <- rmse(office_test_pred, truth = imdb_rating, estimate = .pred) |> 
+  pull(.estimate) |>
   round(3)
 
-rsq_test <- rsq(office_test_pred, truth = imdb_rating, estimate = .pred) %>% 
-  pull(.estimate) %>%
+rsq_test <- rsq(office_test_pred, truth = imdb_rating, estimate = .pred) |> 
+  pull(.estimate) |>
   round(3)
 
 tibble(
   data      = c(rep("train", 2), rep("test", 2)),
   estimate  = c(rmse_train, rsq_train, rmse_test, rsq_test),
   metric    = c("RMSE", "R-squared", "RMSE", "R-squared")
-) %>%
-  pivot_wider(names_from = data, values_from = estimate) %>%
-  bind_cols(comparison = c("RMSE lower for training", "R-squared higher for training")) %>%
+) |>
+  pivot_wider(names_from = data, values_from = estimate) |>
+  bind_cols(comparison = c("RMSE lower for training", "R-squared higher for training")) |>
   kable()
 ```
 
@@ -453,7 +453,7 @@ knitr::include_graphics("img/cross-validation.png")
 ```{r}
 set.seed(456)
 
-office_fit_rs <- office_wflow %>%
+office_fit_rs <- office_wflow |>
   fit_resamples(folds)
 
 office_fit_rs
@@ -480,15 +480,15 @@ collect_metrics(office_fit_rs)
 .panelset[
 .panel[.panel-name[Raw]
 ```{r}
-collect_metrics(office_fit_rs, summarize = FALSE) %>%
+collect_metrics(office_fit_rs, summarize = FALSE) |>
   print(n = 10)
 ```
 ]
 .panel[.panel-name[Tidy]
 ```{r echo=FALSE}
-collect_metrics(office_fit_rs, summarize = FALSE) %>%
-  select(id, .metric, .estimate) %>%
-  pivot_wider(names_from = .metric, values_from = .estimate) %>%
+collect_metrics(office_fit_rs, summarize = FALSE) |>
+  select(id, .metric, .estimate) |>
+  pivot_wider(names_from = .metric, values_from = .estimate) |>
   kable(col.names = c("Fold", "RMSE", "R-squared"), digits = 3)
 ```
 ]
@@ -501,8 +501,8 @@ collect_metrics(office_fit_rs, summarize = FALSE) %>%
 - Cross validation RMSE stats
 
 ```{r echo=FALSE}
-collect_metrics(office_fit_rs, summarize = FALSE) %>%
-  filter(.metric == "rmse") %>%
+collect_metrics(office_fit_rs, summarize = FALSE) |>
+  filter(.metric == "rmse") |>
   summarise(
     min = min(.estimate),
     max = max(.estimate),
@@ -516,7 +516,7 @@ collect_metrics(office_fit_rs, summarize = FALSE) %>%
 - Training data IMDB score stats
 
 ```{r echo=FALSE}
-office_train %>%
+office_train |>
   summarise(
     min = min(imdb_rating),
     max = max(imdb_rating),
