--- a/course-materials/lab-instructions/lab-03/lab-03-nobel-laureates.Rmd
+++ b/course-materials/lab-instructions/lab-03/lab-03-nobel-laureates.Rmd
@@ -5,7 +5,7 @@ output:
     css: ../lab.css
     tufte_variant: "envisioned"
     highlight: pygments
-link-citations: yes
+link-citations: true
 ---
 
 ```{r setup, include = FALSE}
@@ -219,7 +219,7 @@ There are some observations in this dataset that we will exclude from our analys
 -   laureates who are still alive (their `died_date` is `NA`)
 
 ```{r echo=FALSE}
-nobel_living <- nobel %>%
+nobel_living <- nobel |>
   filter(
     !is.na(country),
     gender != "org",
@@ -249,7 +249,7 @@ Note that we can achieve the same result using the `fct_other()` function we've 
 ```
 
 ```{r}
-nobel_living <- nobel_living %>%
+nobel_living <- nobel_living |>
   mutate(
     country_us = if_else(country == "USA", "USA", "Other")
   )
@@ -258,7 +258,7 @@ nobel_living <- nobel_living %>%
 Next, we will limit our analysis to only the following categories: Physics, Medicine, Chemistry, and Economics.
 
 ```{r}
-nobel_living_science <- nobel_living %>%
+nobel_living_science <- nobel_living |>
   filter(category %in% c("Physics", "Medicine", "Chemistry", "Economics"))
 ```
 
