--- a/course-materials/lab-instructions/lab-04/lab-04-viz-sp-data.Rmd
+++ b/course-materials/lab-instructions/lab-04/lab-04-viz-sp-data.Rmd
@@ -6,7 +6,7 @@ output:
     tufte_variant: "envisioned"
     highlight: pygments
     css: ../lab.css
-link-citations: yes
+link-citations: true
 ---
 
 ```{r include = FALSE}
@@ -114,7 +114,7 @@ We know exactly which states are in the US, and we have this information in the 
 ```
 
 ```{r}
-dennys %>%
+dennys |>
   filter(!(state %in% states$abbreviation))
 ```
 
@@ -125,7 +125,7 @@ We don't need to tell R how many times to repeat the character string "United St
 ```
 
 ```{r}
-dennys %>%
+dennys |>
   mutate(country = "United States")
 ```
 
@@ -139,7 +139,7 @@ dennys %>%
     Here is some starter code to get you going:
 
 ```{r eval = FALSE}
-laquinta %>%
+laquinta |>
   mutate(country = case_when(
     state %in% state.abb     ~ "United States",
     state %in% c("ON", "BC") ~ "Canada",
@@ -155,7 +155,7 @@ All Denny's locations are in the United States, so we don't need to worry about 
 However we do need to filter the La Quinta dataset for locations in United States.
 
 ```{r}
-laquinta <- laquinta %>%
+laquinta <- laquinta |>
   filter(country == "United States")
 ```
 
@@ -170,8 +170,8 @@ However note that the variables in the `states` data frame that has the two-lett
 So when we're joining the two data frames we specify that the `state` variable from the Denny's data should be matched `by` the `abbreviation` variable from the `states` data:
 
 ```{r}
-dennys %>%
-  count(state) %>%
+dennys |>
+  count(state) |>
   inner_join(states, by = c("state" = "abbreviation"))
 ```
 
@@ -185,9 +185,9 @@ However before we do so, we need to add an identifier variable.
 We'll call this `establishment` and set the value to `"Denny's"` and `"La Quinta"` for the `dennys` and `laquinta` data frames, respectively.
 
 ```{r}
-dennys <- dennys %>%
+dennys <- dennys |>
   mutate(establishment = "Denny's")
-laquinta <- laquinta %>%
+laquinta <- laquinta |>
   mutate(establishment = "La Quinta")
 ```
 
