--- a/course-materials/lab-instructions/lab-10/lab-10-slr-course-evals.Rmd
+++ b/course-materials/lab-instructions/lab-10/lab-10-slr-course-evals.Rmd
@@ -6,7 +6,7 @@ output:
     tufte_variant: "envisioned"
     highlight: pygments
     css: ../lab.css
-link-citations: yes
+link-citations: true
 ---
 
 ```{r include=FALSE}
