--- a/course-materials/lab-instructions/lab-14/lab-14-collaborating-on-github.Rmd
+++ b/course-materials/lab-instructions/lab-14/lab-14-collaborating-on-github.Rmd
@@ -6,7 +6,7 @@ output:
     tufte_variant: "envisioned"
     highlight: pygments
     toc: yes
-link-citations: yes
+link-citations: true
 ---
 
 ```{r setup, include=FALSE}
