--- a/course-materials/_slides/u2-d01-data-viz/u2-d01-data-viz.Rmd
+++ b/course-materials/_slides/u2-d01-data-viz/u2-d01-data-viz.Rmd
@@ -117,7 +117,7 @@ ggplot(data = starwars, mapping = aes(x = height, y = mass)) +
   geom_point() +
   labs(title = "Mass vs. height of Starwars characters",
        x = "Height (cm)", y = "Weight (kg)") +
-  geom_point(data = starwars %>% filter(name == "Jabba Desilijic Tiure"), size = 5, pch = 1, color = "pink", stroke = 3)
+  geom_point(data = starwars |> filter(name == "Jabba Desilijic Tiure"), size = 5, pch = 1, color = "pink", stroke = 3)
 ```
 
 ---
@@ -132,10 +132,10 @@ ggplot(data = starwars, mapping = aes(x = height, y = mass)) +
   geom_point() +
   labs(title = "Mass vs. height of Starwars characters",
        x = "Height (cm)", y = "Weight (kg)") +
-  geom_point(data = starwars %>% filter(name == "Jabba Desilijic Tiure"), size = 5, pch = 1, color = "pink", stroke = 3)
+  geom_point(data = starwars |> filter(name == "Jabba Desilijic Tiure"), size = 5, pch = 1, color = "pink", stroke = 3)
 dev.off()
 
-out <- fig %>% image_composite(jabba, offset = "+1000+30")
+out <- fig |> image_composite(jabba, offset = "+1000+30")
 
 image_write(out, "img/jabbaplot.png", format = "png")
 knitr::include_graphics("img/jabbaplot.png")
@@ -270,8 +270,8 @@ quartet[23:44,]
 ## Summarising Anscombe's quartet
 
 ```{r quartet-summary}
-quartet %>%
-  group_by(set) %>%
+quartet |>
+  group_by(set) |>
   summarise(
     mean_x = mean(x), 
     mean_y = mean(y),
