--- a/course-materials/_slides/u2-d03-viz-num/u2-d03-viz-num.Rmd
+++ b/course-materials/_slides/u2-d03-viz-num/u2-d03-viz-num.Rmd
@@ -19,7 +19,7 @@ output:
 ```{r packages, echo=FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(openintro)
-loans_full_schema <- loans_full_schema %>%
+loans_full_schema <- loans_full_schema |>
   mutate(grade = factor(grade, ordered = TRUE))
 ```
 
@@ -80,7 +80,7 @@ glimpse(loans_full_schema)
 ## Selected variables
 
 ```{r}
-loans <- loans_full_schema %>%
+loans <- loans_full_schema |>
   select(loan_amount, interest_rate, term, grade, 
          state, annual_income, homeownership, debt_to_income)
 glimpse(loans)
@@ -438,7 +438,7 @@ ggplot(loans, aes(x = debt_to_income, y = interest_rate)) +
 ## Hex plot
 
 ```{r warning = FALSE}
-ggplot(loans %>% filter(debt_to_income < 100), 
+ggplot(loans |> filter(debt_to_income < 100), 
        aes(x = debt_to_income, y = interest_rate)) +
   geom_hex()
 ```
