--- a/course-materials/_slides/u2-d05-tidy-data/u2-d05-tidy-data.Rmd
+++ b/course-materials/_slides/u2-d05-tidy-data/u2-d05-tidy-data.Rmd
@@ -100,14 +100,14 @@ Source: [US Census Fact Finder, General Economic Characteristics, ACS 2017](http
 
 .pull-left[
 ```{r echo=FALSE}
-starwars %>%
+starwars |>
   select(name, height, mass)
 ```
 ]
 .pull-right[
 ```{r echo=FALSE}
-starwars %>%
-  group_by(gender) %>%
+starwars |>
+  group_by(gender) |>
   summarize(avg_ht = mean(height, na.rm = TRUE))
 ```
 ]
@@ -118,14 +118,14 @@ starwars %>%
 
 .pull-left[
 ```{r eval=FALSE}
-starwars %>%
+starwars |>
   select(name, height, mass)
 ```
 ]
 .pull-right[
 ```{r eval=FALSE}
-starwars %>%
-  group_by(gender) %>%
+starwars |>
+  group_by(gender) |>
   summarize(
     avg_ht = mean(height, na.rm = TRUE)
     )
