--- a/course-materials/_slides/u2-d10-data-types/u2-d10-data-types.Rmd
+++ b/course-materials/_slides/u2-d10-data-types/u2-d10-data-types.Rmd
@@ -45,7 +45,7 @@ cat_lovers
 ## Oh why won't you work?!
 
 ```{r}
-cat_lovers %>%
+cat_lovers |>
   summarise(mean_cats = mean(number_of_cats))
 ```
 
@@ -64,7 +64,7 @@ knitr::include_graphics("img/mean-help.png")
 ## Oh why won't you still work??!!
 
 ```{r}
-cat_lovers %>%
+cat_lovers |>
   summarise(mean_cats = mean(number_of_cats, na.rm = TRUE))
 ```
 
@@ -87,7 +87,7 @@ glimpse(cat_lovers)
 .small[
 ```{r echo=FALSE}
 options(htmltools.preserve.raw = FALSE)
-cat_lovers %>%
+cat_lovers |>
   datatable()
 ```
 ]
@@ -98,12 +98,12 @@ cat_lovers %>%
 
 .midi[
 ```{r}
-cat_lovers %>%
+cat_lovers |>
   mutate(number_of_cats = case_when(
     name == "Ginger Clark" ~ 2,
     name == "Doug Bass"    ~ 3,
     TRUE                   ~ as.numeric(number_of_cats)
-    )) %>%
+    )) |>
   summarise(mean_cats = mean(number_of_cats))
 ```
 ]
@@ -113,7 +113,7 @@ cat_lovers %>%
 ## Always you need to respect data types
 
 ```{r}
-cat_lovers %>%
+cat_lovers |>
   mutate(
     number_of_cats = case_when(
       name == "Ginger Clark" ~ "2",
@@ -121,7 +121,7 @@ cat_lovers %>%
       TRUE                   ~ number_of_cats
       ),
     number_of_cats = as.numeric(number_of_cats)
-    ) %>%
+    ) |>
   summarise(mean_cats = mean(number_of_cats))
 ```
 
@@ -130,7 +130,7 @@ cat_lovers %>%
 ## Now that we know what we're doing...
 
 ```{r}
-cat_lovers <- cat_lovers %>% #<<
+cat_lovers <- cat_lovers |> #<<
   mutate(
     number_of_cats = case_when(
       name == "Ginger Clark" ~ "2",
