--- a/course-materials/_slides/u2-d21-functions/u2-d21-functions.Rmd
+++ b/course-materials/_slides/u2-d21-functions/u2-d21-functions.Rmd
@@ -40,7 +40,7 @@ knitr::include_graphics("img/fm-speeches.png")
 ## End with 🛑
 
 ```{r echo=FALSE}
-covid_speeches <- read_rds("data/covid-speeches-scot.rds") %>%
+covid_speeches <- read_rds("data/covid-speeches-scot.rds") |>
   print(n = 15)
 ```
 
@@ -111,8 +111,8 @@ knitr::include_graphics("img/fm-speech-oct-26.png")
 .pull-left-wide[
 <br><br>
 ```{r}
-title <- speech_page %>%
-    html_node(".article-header__title") %>%
+title <- speech_page |>
+    html_node(".article-header__title") |>
     html_text()
 
 title
@@ -132,13 +132,13 @@ knitr::include_graphics("img/title.png")
 ```{r}
 library(lubridate)
 
-speech_page %>%
-    html_node(".content-data__list:nth-child(1) strong") %>%
+speech_page |>
+    html_node(".content-data__list:nth-child(1) strong") |>
     html_text() 
 
-date <- speech_page %>%
-    html_node(".content-data__list:nth-child(1) strong") %>%
-    html_text() %>%
+date <- speech_page |>
+    html_node(".content-data__list:nth-child(1) strong") |>
+    html_text() |>
     dmy()
 date
 ```
@@ -155,8 +155,8 @@ knitr::include_graphics("img/date.png")
 
 .pull-left-wide[
 ```{r}
-location <- speech_page %>%
-    html_node(".content-data__list+ .content-data__list strong") %>%
+location <- speech_page |>
+    html_node(".content-data__list+ .content-data__list strong") |>
     html_text()
 
 location
@@ -174,8 +174,8 @@ knitr::include_graphics("img/location.png")
 
 .pull-left-wide[
 ```{r}
-abstract <- speech_page %>%
-    html_node(".leader--first-para p") %>%
+abstract <- speech_page |>
+    html_node(".leader--first-para p") |>
     html_text()
 
 abstract
@@ -193,9 +193,9 @@ knitr::include_graphics("img/abstract.png")
 
 .pull-left-wide[
 ```{r output.lines=11}
-text <- speech_page %>% 
-    html_nodes("#preamble p") %>%
-    html_text() %>%
+text <- speech_page |> 
+    html_nodes("#preamble p") |>
+    html_text() |>
     list()
 
 text
@@ -254,26 +254,26 @@ speech_page
 ## Extract components of 23 Oct speech
 
 ```{r}
-title <- speech_page %>%
-  html_node(".article-header__title") %>%
+title <- speech_page |>
+  html_node(".article-header__title") |>
   html_text()
 
-date <- speech_page %>%
-  html_node(".content-data__list:nth-child(1) strong") %>%
-  html_text() %>%
+date <- speech_page |>
+  html_node(".content-data__list:nth-child(1) strong") |>
+  html_text() |>
   dmy()
 
-location <- speech_page %>%
-  html_node(".content-data__list+ .content-data__list strong") %>%
+location <- speech_page |>
+  html_node(".content-data__list+ .content-data__list strong") |>
   html_text()
 
-abstract <- speech_page %>%
-  html_node(".leader--first-para p") %>%
+abstract <- speech_page |>
+  html_node(".leader--first-para p") |>
   html_text()
 
-text <- speech_page %>%
-  html_nodes("#preamble p") %>%
-  html_text() %>%
+text <- speech_page |>
+  html_nodes("#preamble p") |>
+  html_text() |>
   list()
 ```
 
@@ -369,26 +369,26 @@ Assuming that the page structure is the same for each speech page, how many "thi
 url_23_oct <- "https://www.gov.scot/publications/coronavirus-covid-19-update-first-ministers-speech-23-october/"
 speech_page <- read_html(url_23_oct)
 
-title <- speech_page %>%
-  html_node(".article-header__title") %>%
+title <- speech_page |>
+  html_node(".article-header__title") |>
   html_text()
 
-date <- speech_page %>%
-  html_node(".content-data__list:nth-child(1) strong") %>%
-  html_text() %>%
+date <- speech_page |>
+  html_node(".content-data__list:nth-child(1) strong") |>
+  html_text() |>
   dmy()
 
-location <- speech_page %>%
-  html_node(".content-data__list+ .content-data__list strong") %>%
+location <- speech_page |>
+  html_node(".content-data__list+ .content-data__list strong") |>
   html_text()
 
-abstract <- speech_page %>%
-  html_node(".leader--first-para p") %>%
+abstract <- speech_page |>
+  html_node(".leader--first-para p") |>
   html_text()
 
-text <- speech_page %>%
-  html_nodes("#preamble p") %>%
-  html_text() %>%
+text <- speech_page |>
+  html_nodes("#preamble p") |>
+  html_text() |>
   list()
 
 tibble(
@@ -467,26 +467,26 @@ scrape_speech <- function(url) {
   
   speech_page <- read_html(url)
 
-  title <- speech_page %>%
-    html_node(".article-header__title") %>%
+  title <- speech_page |>
+    html_node(".article-header__title") |>
     html_text()
 
-  date <- speech_page %>%
-    html_node(".content-data__list:nth-child(1) strong") %>%
-    html_text() %>%
+  date <- speech_page |>
+    html_node(".content-data__list:nth-child(1) strong") |>
+    html_text() |>
     dmy()
 
-  location <- speech_page %>%
-    html_node(".content-data__list+ .content-data__list strong") %>%
+  location <- speech_page |>
+    html_node(".content-data__list+ .content-data__list strong") |>
     html_text()
 
-  abstract <- speech_page %>%
-    html_node(".leader--first-para p") %>%
+  abstract <- speech_page |>
+    html_node(".leader--first-para p") |>
     html_text()
 
-  text <- speech_page %>%
-    html_nodes("#preamble p") %>%
-    html_text() %>%
+  text <- speech_page |>
+    html_nodes("#preamble p") |>
+    html_text() |>
     list()
 
   tibble(
@@ -503,7 +503,7 @@ scrape_speech <- function(url) {
 ## Function in action
 
 ```{r}
-scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-update-first-ministers-speech-26-october/") %>%
+scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-update-first-ministers-speech-26-october/") |>
   glimpse()
 ```
 
@@ -512,7 +512,7 @@ scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-upda
 ## Function in action
 
 ```{r}
-scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-update-first-ministers-speech-23-october/") %>%
+scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-update-first-ministers-speech-23-october/") |>
   glimpse()
 ```
 
@@ -521,7 +521,7 @@ scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-upda
 ## Function in action
 
 ```{r}
-scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-update-first-ministers-speech-22-october/") %>%
+scrape_speech(url = "https://www.gov.scot/publications/coronavirus-covid-19-update-first-ministers-speech-22-october/") |>
   glimpse()
 ```
 
