--- a/course-materials/_slides/u4-d06-logistic-reg/u4-d06-logistic-reg.Rmd
+++ b/course-materials/_slides/u4-d06-logistic-reg/u4-d06-logistic-reg.Rmd
@@ -57,7 +57,7 @@ Would you expect longer or shorter emails to be spam?
 
 .pull-left[
 ```{r echo=FALSE, out.width="100%"}
-email %>%
+email |>
   ggplot(aes(x = num_char, y = spam, fill = spam, color = spam)) +
   geom_density_ridges2(alpha = 0.5) +
   labs(
@@ -72,8 +72,8 @@ email %>%
 ]
 .pull-right[
 ```{r echo=FALSE}
-email %>% 
-  group_by(spam) %>% 
+email |> 
+  group_by(spam) |> 
   summarise(mean_num_char = mean(num_char))
 ```
 ]
@@ -87,7 +87,7 @@ Would you expect emails that have subjects starting with "Re:", "RE:", "re:", or
 --
 
 ```{r echo=FALSE}
-email %>%
+email |>
   ggplot(aes(x = re_subj, fill = spam)) +
   geom_bar(position = "fill") +
   labs(
@@ -115,9 +115,9 @@ email %>%
 This isn't something we can reasonably fit a linear model to -- we need something different!
 
 ```{r echo=FALSE, out.width="70%"}
-means <- email %>%
-  group_by(spam) %>%
-  summarise(mean_num_char = mean(num_char)) %>%
+means <- email |>
+  group_by(spam) |>
+  summarise(mean_num_char = mean(num_char)) |>
   mutate(group = 1)
 
 ggplot(email, aes(x = num_char, y = spam, color = spam)) +
@@ -197,7 +197,7 @@ $$logit(p) = \log\left(\frac{p}{1-p}\right)$$
 ## Logit function, visualised
 
 ```{r echo=FALSE}
-d <- tibble(p = seq(0.001, 0.999, length.out = 1000)) %>%
+d <- tibble(p = seq(0.001, 0.999, length.out = 1000)) |>
   mutate(logit_p = log(p/(1-p)))
 
 ggplot(d, aes(x = p, y = logit_p)) + 
@@ -249,8 +249,8 @@ In R we fit a GLM in the same way as a linear model except we
 --
 
 ```{r}
-spam_fit <- logistic_reg() %>%
-  set_engine("glm") %>%
+spam_fit <- logistic_reg() |>
+  set_engine("glm") |>
   fit(spam ~ num_char, data = email, family = "binomial")
 
 tidy(spam_fit)
@@ -300,13 +300,13 @@ newdata <- tibble(
 y_hat <- predict(spam_fit, newdata, type = "raw")
 p_hat <- exp(y_hat) / (1 + exp(y_hat))
 
-newdata <- newdata %>%
+newdata <- newdata |>
   bind_cols(
     y_hat = y_hat,
     p_hat = p_hat
   )
 
-spam_aug <- augment(spam_fit$fit) %>%
+spam_aug <- augment(spam_fit$fit) |>
   mutate(prob = exp(.fitted) / (1 + exp(.fitted)))
 
 ggplot(spam_aug, aes(x = num_char)) +
