--- a/course-materials/hw-instructions/hw-06/hw-06-money-in-politics.Rmd
+++ b/course-materials/hw-instructions/hw-06/hw-06-money-in-politics.Rmd
@@ -5,7 +5,7 @@ output:
     css: ../hw.css
     tufte_variant: "envisioned"
     highlight: pygments
-link-citations: yes
+link-citations: true
 ---
 
 ```{r include = FALSE}
@@ -168,35 +168,35 @@ The following exercises walk you through how to make these fixes to the data.
 pac_all <- read_csv("data/pac-all.csv")
 
 parse_currency <- function(x){
-  x %>%
+  x |>
     # remove dollar sign
-    str_remove("\\$") %>%
+    str_remove("\\$") |>
     # remove all occurences of commas
-    str_remove_all(",") %>%
+    str_remove_all(",") |>
     # convert to numeric
     as.numeric()
 }
 
 # plot
-pac_all %>%
-  separate(country_parent, into = c("country", "parent"), sep = "/", extra = "merge") %>%
+pac_all |>
+  separate(country_parent, into = c("country", "parent"), sep = "/", extra = "merge") |>
   mutate(
     total = parse_currency(total),
     dems = parse_currency(dems),
     repubs = parse_currency(repubs)
-  ) %>%
-  filter(country == "UK") %>%
-  group_by(year) %>%
+  ) |>
+  filter(country == "UK") |>
+  group_by(year) |>
   summarise(
     Democrat = sum(dems),
     Republican = sum(repubs),
     .groups = "drop"
-  ) %>%
+  ) |>
   pivot_longer(
     cols = c(Democrat, Republican),
     names_to = "party",
     values_to = "amount"
-  ) %>%
+  ) |>
   ggplot(aes(x = year)) +
   geom_line(aes(y = amount, group = party, color = party), size = 1) +
   scale_color_manual(values = c("blue", "red")) +
