--- a/course-materials/hw-instructions/hw-10/hw-10-wrap-up.Rmd
+++ b/course-materials/hw-instructions/hw-10/hw-10-wrap-up.Rmd
@@ -5,7 +5,7 @@ output:
     css: ../hw.css
     tufte_variant: "envisioned"
     highlight: pygments
-link-citations: yes
+link-citations: true
 ---
 
 ```{r include = FALSE}
