--- a/course-materials/lab-instructions/lab-09/lab-09-better-viz.Rmd
+++ b/course-materials/lab-instructions/lab-09/lab-09-better-viz.Rmd
@@ -5,7 +5,7 @@ output:
     tufte_variant: "envisioned"
     highlight: pygments
     css: ../lab.css
-link-citations: yes
+link-citations: true
 ---
 
 In this lab our goal is to reconstruct and improve a data visualisation on COVID and mask wearing.
