--- a/course-materials/lab-instructions/lab-01/lab-01-hello-r.Rmd
+++ b/course-materials/lab-instructions/lab-01/lab-01-hello-r.Rmd
@@ -5,13 +5,13 @@ output:
     css: ../lab.css
     tufte_variant: "envisioned"
     highlight: pygments
-link-citations: yes
+link-citations: true
 ---
 
 ```{marginfigure}
 R is the name of the programming language itself and RStudio is a convenient interface.
 ```
-
+	
 The main goal of this lab is to introduce you to R and RStudio, which we will be using throughout the course both to learn the statistical concepts discussed in the course and to analyze real data and come to informed conclusions.
 
 ```{marginfigure}
@@ -28,78 +28,29 @@ And to make versioning simpler, this is a solo lab.
 Additionally, we want to make sure everyone gets a significant amount of time at the steering wheel.
 In future labs you'll learn about collaborating on GitHub and produce a single lab report for your team.
 
-# Connecting GitHub and RStudio Cloud
-
-You should have already received an invitation to join the GitHub organization for this course.
-You need to accept the invitation before moving on to the next step.
-
-To connect your RStudio and GitHub accounts by following the steps below:
-
--   Click on your name on the top right corner to open the right menu.
--   Then, click on Authentication.
-
-```{r github-auth-1, echo = FALSE}
-knitr::include_graphics("img/github-auth-1.png")
-```
-
--   In the Authentication window, check the box for *Enabled*.
-
-```{r github-auth-2, echo = FALSE}
-knitr::include_graphics("img/github-auth-2.png")
-```
-
--   In the next window, click on the green box that says "Authorize rstudio".
-
-```{r github-auth-3, echo = FALSE}
-knitr::include_graphics("img/github-auth-3.png")
-```
-
--   Back in the Authentication window, check the box for *Private repo access also enabled*, and once again, on the green box that says "Authorize rstudio" in the next window. At this point you should also make sure that the course organization shows up for you under *Organization access*. If it does not, this means you have not yet accepted the GitHub invitation to join the course, and you should go back and do that.
-
-```{r github-auth-4, echo = FALSE}
-knitr::include_graphics("img/github-auth-4.png")
-```
-
--   Once you're done, both of these boxes should be checked.
-
-```{r github-auth-5, echo = FALSE}
-knitr::include_graphics("img/github-auth-5.png")
-```
-
--   To confirm that you've successfully linked up your GitHub and RStudio Cloud accounts, [GitHub settings \> Applications](https://github.com/settings/applications). You should see RStudio listed as an authorized app under *Authorized OAuth Apps*. If you don't this is a good time to ask a question.
-
-```{r github-auth-6, echo = FALSE}
-knitr::include_graphics("img/github-auth-6.png")
-```
-
 # Getting started
 
-Each of your assignments will begin with the following steps.
-You saw these once in class yesterday, they're outlined in detail here again.
-Going forward each lab will start with a "Getting started" section but details will be a bit more sparse than this.
-You can always refer back to this lab for a detailed list of the steps involved for getting started with an assignment.
+Each of your assignments will begin with the following steps. Each lab will
+start with a "Getting started" section but details will be a bit more sparse
+than this. You can always refer back to this lab for a detailed list of the
+steps involved for getting started with an assignment.
 
--   Click on the assignment link that you should have received in your email to create your GitHub repository (which we'll refer to as "repo" going forward) for the assignment. This repo contains a template you can build on to complete your assignment.
+-   In our GitHub Organization, click 'Team' tab do find your team. Click
+	'Memebers' tab lacated under green button 'New Team' and from drop-down menu
+    select 'My teams'. Choose the team from the list.
+-   Click on the GitHub repository (in short: 'repo') link located under
+   "Repository" tab. Click the 'Fork' button to copy the repo to your account.
 
-```{r clone-repo-link, fig.margin = TRUE, echo = FALSE, fig.width=3}
-knitr::include_graphics("img/clone-repo-link.png")
-```
+-   On GitHub, click on the green **Code** button, select **Use HTTPS** (this
+    might already be selected by default, and if it is, you'll see the text
+    **Clone with HTTPS** as in the image below). Click on the clipboard icon to
+    copy the repo URL.
 
--   On GitHub, click on the green **Clone or download** button, select **Use HTTPS** (this might already be selected by default, and if it is, you'll see the text **Clone with HTTPS** as in the image below). Click on the clipboard icon to copy the repo URL.
+-   Go to RStudio and create a **New Project from Git Repo**. You will need to
+    click on **New Project** --> **Version Control** --> **Git** --> and paste
+    repo url in 'Ropository URL' field.
 
-```{r new-project-from-gh, fig.margin = TRUE, echo = FALSE, fig.width=3}
-knitr::include_graphics("img/new-project-from-gh.png")
-```
-
--   Go to RStudio Cloud and into the course workspace. Create a **New Project from Git Repo**. You will need to click on the down arrow next to the **New Project** button to see this option.
-
-```{r paste-gh-repo-url, fig.margin = TRUE, echo = FALSE, fig.width=5}
-knitr::include_graphics("img/paste-gh-repo-url.png")
-```
-
--   Copy and paste the URL of your assignment repo into the dialog box:
-
--   Hit OK, and you're good to go!
+-   Hit Create Project, and you're good to go!
 
 ## Warm up
 
@@ -184,8 +135,8 @@ Let's take a look at what these datasets are.
 To do so we can make a *frequency table* of the dataset variable:
 
 ```{r}
-datasaurus_dozen %>%
-  count(dataset) %>%
+datasaurus_dozen |>
+  count(dataset) |>
   print(13)
 ```
 
@@ -208,13 +159,13 @@ Start with the `datasaurus_dozen` and pipe it into the `filter` function to filt
 Store the resulting filtered data frame as a new data frame called `dino_data`.
 
 ```{r}
-dino_data <- datasaurus_dozen %>%
+dino_data <- datasaurus_dozen |>
   filter(dataset == "dino")
 ```
 
 There is a lot going on here, so let's slow down and unpack it a bit.
 
-First, the pipe operator: `%>%`, takes what comes before it and sends it as the first argument to what comes after it.
+First, the pipe operator: `|>`, takes what comes before it and sends it as the first argument to what comes after it.
 So here, we're saying `filter` the `datasaurus_dozen` data frame for observations where `dataset == "dino"`.
 
 Second, the assignment operator: `<-`, assigns the name `dino_data` to the filtered data frame.
@@ -249,7 +200,7 @@ Start with `dino_data` and calculate a summary statistic that we will call `r` a
 ```
 
 ```{r}
-dino_data %>%
+dino_data |>
   summarize(r = cor(x, y))
 ```
 
@@ -279,9 +230,9 @@ ggplot(datasaurus_dozen, aes(x = x, y = y, color = dataset))+
 And we can use the `group_by` function to generate all the summary correlation coefficients.
 
 ```{r all-r, eval=FALSE}
-datasaurus_dozen %>%
-  group_by(dataset) %>%
-  summarize(r = cor(x, y)) %>%
+datasaurus_dozen |>
+  group_by(dataset) |>
+  summarize(r = cor(x, y)) |>
   print(13)
 ```
 
